# bureau

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  VISION.md  bureau.toml.example  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  e2e-dotnet.yml  e2e-python.yml  e2e-typescript.yml  e2e.yml
.specify/memory/: constitution.md
bureau/: __main__.py  cli.py  config.py  events.py  graph.py  kafka_publisher.py  memory.py  models.py  repo_analyser.py  run_manager.py  spec_parser.py  state.py
bureau/data/: constitution.md  env.example
bureau/nodes/: builder.py  complete_branch.py  critic.py  escalate.py  git_commit.py  memory_node.py  planner.py  pr_create.py  prepare_branch.py  repo_analysis.py  reviewer.py  tasks_loader.py  validate_spec.py
bureau/personas/: builder.py  critic.py  planner.py  reviewer.py
bureau/tools/: file_tools.py  pipeline.py  shell_tools.py
concepts/: index.html
concepts/constitution/: index.html
concepts/escalation/: index.html
concepts/pipeline-phases/: index.html
concepts/ralph-loop/: index.html
contributing/: index.html
contributing/adding-a-language/: index.html
contributing/architecture/: index.html
contributing/development/: index.html
contributing/node-reference/: index.html
development/: index.html
docs/: development.md  index.md
docs/concepts/: constitution.md  escalation.md  index.md  pipeline-phases.md  ralph-loop.md
docs/contributing/: adding-a-language.md  architecture.md  development.md  index.md  node-reference.md
docs/getting-started/: config-reference.md  index.md  installation.md  quick-start.md
docs/how-to/: index.md  monitor-a-run.md  (+4 more)
getting-started/: index.html
how-to/: index.html
reference/: index.html
search/: search_index.json
stylesheets/: extra.css
(+158 files in other folders)
