[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bureau"
version = "0.1.0"
description = "Autonomous ASDLC runtime — spec file in, pull request out"
requires-python = ">=3.14"
dependencies = [
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite",
    "typer>=0.12",
    "pydantic>=2",
    "anthropic>=0.25",
    "python-dotenv>=1.0",
    "deepagents>=0.5.3",
    "cloudevents>=1.11",
    "confluent-kafka>=2.3",
]

[project.scripts]
bureau = "bureau.cli:app"

[tool.setuptools.packages.find]
include = ["bureau*"]

[tool.setuptools.package-data]
bureau = ["data/*.md", "data/env.example", "skills/**/*.md"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "pytest-timeout>=2.3",
    "ruff>=0.9",
    "testcontainers[kafka]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 105

[tool.ruff.lint]
select = ["E", "F", "I"]
